Wed Jan 23 16:04:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
	  tarballs - mainly to get fixes for the build system on windows.

Thu Jan 10 00:28:26 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to get latest archives.

Thu Jan 10 00:04:51 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with new branchpoint.

Wed Jan 09 22:50:36 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with version numbers for latest
	  branches.
	* libs/get_xapian.py: Update with details of latest tarballs, which
	  include OP_VALUE_GE and OP_VALUE_LE.
	* xappy/searchconnection.py: Allow None to be specified as the
	  begin or end or a range query - allows half ranges to be
	  specified.
	* xappy/searchconnection_doctest2.txt: Test passing None as the end
	  parameters of a range query.

Wed Jan 09 22:46:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with version numbers for latest
	  branches.
	* libs/get_xapian.py: Update with details of latest tarballs, which
	  include OP_VALUE_GE and OP_VALUE_LE.
	* xappy/searchconnection.py: Allow None to be specified as the
	  begin or end or a range query - allows half ranges to be
	  specified.
	* xappy/searchconnection_doctest2.txt: Test passing None as the
	  end parameters of a range query.

Mon Jan 07 19:47:36 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New script (taken from flax) to download the
	  xapian tarballs and unpack them, ready to be built.
	* libs/*.tgz: Remove the tarballs from svn - they were too big to
	  be kept here.  They're now hosted on the googlecode download
	  area, which should be as reliable as the googlecode svn server.
	* utils/make_xappy_tarballs: Update with new version numbers.
