@@ -1,3 +1,8 @@
+Wed Jan 23 22:27:50 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Even newer xapian tarball - containing more
+	  fixes from charlie for windows.
+
 Wed Jan 23 16:04:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
